change: getAllPost() to cursor based pagination, sort my posts to descending order